fixed back button z-index-1;

--- a/server/public/css/layout/_layout.scss
+++ b/server/public/css/layout/_layout.scss
@@ -33,6 +33,7 @@
 		position: absolute;
 		top: 0.3em;
 		left: 0.3em;
+		z-index: 1;
 	}
 	.arrow-up {
 		width: 0;
